adding theory references including hijing

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -163,6 +163,116 @@
       primaryClass   = "hep-lat",
       SLACcitation   = "%%CITATION = ARXIV:1309.5258;%%"
 }
+@article{Bahr:2008pv,
+      author         = "B{\"{a}}hr, M. and others",
+      title          = "{Herwig++ Physics and Manual}",
+      journal        = "Eur. Phys. J. C",
+      volume         = "58",
+      year           = "2008",
+      pages          = "639",
+      doi            = "10.1140/epjc/s10052-008-0798-9",
+      eprint         = "0803.0883",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2008-038, CAVENDISH-HEP-08-03, KA-TP-05-2008,
+                        DCPT-08-22, IPPP-08-11, CP3-08-05",
+      SLACcitation   = "%%CITATION = ARXIV:0803.0883;%%"
+}
+@article{Baker1984437,
+title = "Clarification of the use of CHI-square and likelihood functions in fits to histograms ",
+journal = "Nuclear Instruments and Methods in Physics Research ",
+volume = "221",
+number = "2",
+pages = "437",
+year = "1984",
+note = "",
+noissn = "0167-5087",
+doi = "http://dx.doi.org/10.1016/0167-5087(84)90016-4",
+nourl = "http://www.sciencedirect.com/science/article/pii/0167508784900164",
+author = "Steve Baker and Robert D. Cousins"
+}
+@article{Bertsch:1989vn,
+      author         = "Bertsch, G. F.",
+      title          = "{Pion Interferometry as a Probe of the Plasma}",
+      booktitle      = "{QUARK MATTER '88. PROCEEDINGS, 7TH INTERNATIONAL
+                        CONFERENCE ON ULTRARELATIVISTIC NUCLEUS-NUCLEUS
+                        COLLISIONS, LENOX, USA, SEPTEMBER 26-30, 1988}",
+      journal        = "Nucl. Phys. A",
+      volume         = "498",
+      year           = "1989",
+      pages          = "173C-180C",
+      doi            = "10.1016/0375-9474(89)90597-6",
+      SLACcitation   = "%%CITATION = NUPHA,A498,173C;%%"
+}
+@article{Bialas:2013oza,
+      author         = "Bialas, A. and Zalewski, K.",
+      title          = "{Finite size of hadrons and Bose-Einstein correlations}",
+      journal        = "Phys.~Lett.~B",
+      volume         = "727",
+      pages          = "182",
+      doi            = "10.1016/j.physletb.2013.10.018",
+      year           = "2013",
+      eprint         = "1309.6169",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1309.6169;%%",
+}
+@article{Bohr:1913,
+author = {N. Bohr},
+title = {I. On the constitution of atoms and molecules},
+journal = {Philosophical Magazine Series 6},
+volume = {26},
+nonumber = {151},
+pages = {1},
+year = {1913},
+doi = {10.1080/14786441308634955},
+noURL = {http://dx.doi.org/10.1080/14786441308634955},
+}
+@article{Bozek:2014fxa,
+      author         = "Bożek, Piotr",
+      title          = "{Femtoscopy analysis of d-Au interactions at
+                        $\sqrt{s}=200$ GeV}",
+      journal        = "Phys. Rev. C",
+      volume         = "90",
+      year           = "2014",
+      nonumber         = "6",
+      pages          = "064913",
+      doi            = "10.1103/PhysRevC.90.064913",
+      eprint         = "1408.1264",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1408.1264;%%"
+}
+@article{Bowler:1991vx,
+      author         = "Bowler, Mike G.",
+      title          = "{Coulomb corrections to Bose-Einstein correlations have
+                        been greatly exaggerated}",
+      journal        = "Phys.~Lett.~B",
+      volume         = "270",
+      pages          = "69",
+      doi            = "10.1016/0370-2693(91)91541-3",
+      year           = "1991",
+      reportNumber   = "OUNP-91-23",
+      SLACcitation   = "%%CITATION = PHLTA,B270,69;%%",
+}
+@article{Buckley:2014ana,
+      author         = "Buckley, Andy and Ferrando, James and Lloyd, Stephen and
+                        Nordström, Karl and Page, Ben and Rüfenacht, Martin and
+                        Schönherr, Marek and Watt, Graeme",
+      title          = "{LHAPDF6: parton density access in the LHC precision
+                        era}",
+      journal        = "Eur. Phys. J. C",
+      volume         = "75",
+      year           = "2015",
+      nonumber         = "3",
+      pages          = "132",
+      doi            = "10.1140/epjc/s10052-015-3318-8",
+      eprint         = "1412.7420",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "GLAS-PPE-2014-05, MCNET-14-29, IPPP-14-111, DCPT-14-222",
+      SLACcitation   = "%%CITATION = ARXIV:1412.7420;%%"
+}
 @article{Callan:1969uq,
       author         = "Callan, Jr., Curtis G. and Gross, David J.",
       title          = "{High-energy electroproduction and the constitution of
@@ -476,6 +586,22 @@
       archivePrefix  = "arXiv",
       primaryClass   = "hep-th",
       SLACcitation   = "%%CITATION = ARXIV:1704.08699;%%"
+}
+@article{Sjostrand:2007gs,
+      author         = "Sjöstrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+                        Z.",
+      title          = "{A Brief Introduction to PYTHIA 8.1}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "178",
+      year           = "2008",
+      pages          = "852",
+      doi            = "10.1016/j.cpc.2008.01.036",
+      eprint         = "0710.3820",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-LCGAPP-2007-04, LU-TP-07-28,
+                        FERMILAB-PUB-07-512-CD-T",
+      SLACcitation   = "%%CITATION = ARXIV:0710.3820;%%"
 }
 @article{Tanabashi:2018oca,
       author         = "Tanabashi, M. and others",
