cleaning up defs

--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -125,11 +125,10 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\GGTOWW}{G\textsc{G2WW}}
 \newcommand{\HDECAY}{H\textsc{decay}}
 \newcommand{\GEANTFour}{\textsc{Geant4}\xspace}
-%\newcommand{\ACERMC}{{\textsc{acermc}}}
 
-\newcommand\CTEQ         {{\textsc{CTEQ}}}
-\newcommand\CTTen        {{\textsc{CT10}}}
-\newcommand\CTEQSix      {{\textsc{CTEQ6L1}}}
+%% \newcommand\CTEQ         {{\textsc{CTEQ}}}
+%% \newcommand\CTTen        {{\textsc{CT10}}}
+%% \newcommand\CTEQSix      {{\textsc{CTEQ6L1}}}
 
 \newcommand{\resopara}{\ensuremath{\sigma_\mathrm{L}}}
 \newcommand{\resoperp}{\ensuremath{\sigma_\mathrm{T}}}
@@ -139,24 +138,6 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\bslash}{\ensuremath{\backslash}}
 \newcommand{\BibTeX}{{\sc Bib\TeX}}
 
-%% \newcommand{\figref}[1]{Figure~\ref{#1}}
-%% \newcommand{\figsref}[1]{Figures.~\ref{#1}}
-%% %\newcommand{\partref}[1]{part~\ref{#1}}
-%% \newcommand{\Secref}[1]{Section~\ref{#1}}
-%% \newcommand{\tabref}[1]{Table~\ref{#1}}
-
-% defined with \gtrsim and \lesssim
-%% \def\lsim{\mathrel{\rlap{\lower4pt\hbox{\hskip1pt$\sim$}}
-%%     \raise1pt\hbox{$<$}}}                % less than or approx. symbol
-%% \def\gsim{\mathrel{\rlap{\lower4pt\hbox{\hskip1pt$\sim$}}
-%%     \raise1pt\hbox{$>$}}}                % greater than or approx. symbol
-
-%\renewcommand{\thesubfigure}{\alpha{subfigure}}
-%\makeatletter
-%\renewcommand{\p@subfigure}{\arabic{figure}}
-%\renewcommand{\thesubfigure}{\alph{subfigure}}
-%\renewcommand{\@thesubfigure}{(\thesubfigure)}
-%\makeatother
 \newcommand{\powheg}{\textsc{Powheg}}
 \newcommand{\herwig}{\textsc{Herwig}}
 \newcommand{\pythia}{\textsc{Pythia}}
