first round of results added

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -16,6 +16,7 @@
   \acro{HLT}{High Level Trigger}
   \acro{HMT}{high-multiplicity trigger}
   \acro{HRG}{hadron resonance gas}
+  \acro{GGCF}{Glauber-Gribov color fluctuation} %% check acronyms package to see how to place extra information here?
   \acro{ID}{inner detector}
   \acro{IP}{interaction point}
   \acro{L1}{Level-1}
