--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -243,6 +243,20 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = ARXIV:1408.1264;%%"
 }
+@article{Bozek:2017bwp,
+      author         = "Bozek, Piotr and Bysiak, Sebastian",
+      title          = "{Interferometry correlations in central p+Pb collisions}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C78",
+      year           = "2018",
+      number         = "1",
+      pages          = "53",
+      doi            = "10.1140/epjc/s10052-017-5482-5",
+      eprint         = "1708.09173",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1708.09173;%%"
+}
 @article{Bowler:1991vx,
       author         = "Bowler, Mike G.",
       title          = "{Coulomb corrections to Bose-Einstein correlations have
@@ -283,6 +297,20 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       pages          = "156-159",
       doi            = "10.1103/PhysRevLett.22.156",
       SLACcitation   = "%%CITATION = PRLTA,22,156;%%"
+}
+@article{Chapman:1994yv,
+      author         = "Chapman, Scott and Scotto, Pierre and Heinz, Ulrich W.",
+      title          = "{New Cross Term in the Two-Particle Hanbury-Brown–Twiss Correlation Function in Ultrarelativistic Heavy-Ion Collisions}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "74",
+      year           = "1995",
+      pages          = "4400",
+      doi            = "10.1103/PhysRevLett.74.4400",
+      eprint         = "hep-ph/9408207",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "TPR-94-28",
+      SLACcitation   = "%%CITATION = HEP-PH/9408207;%%"
 }
 @article{Csernai:2006zz,
       author         = "Csernai, Laszlo P. and Kapusta, Joseph.I. and McLerran,
@@ -434,6 +462,17 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       pages          = "341-372",
       doi            = "10.1016/0003-4916(79)90130-1",
       SLACcitation   = "%%CITATION = APNYA,118,341;%%"
+}
+@article{Kolb:2003dz,
+      author         = "Kolb, Peter F. and Heinz, Ulrich W.",
+      title          = "{Hydrodynamic description of ultrarelativistic heavy ion
+                        collisions}",
+      year           = "2003",
+      eprint         = "nucl-th/0305084",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      reportNumber   = "SUNY-NTG-03-06",
+      SLACcitation   = "%%CITATION = NUCL-TH/0305084;%%"
 }
 @article{Kovtun:2004de,
       author         = "Kovtun, P. and Son, Dan T. and Starinets, Andrei O.",
