adding references from pratt

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -597,6 +597,30 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = ARXIV:1404.7327;%%"
 }
+@article{Pratt:1986cc,
+      author         = "Pratt, S.",
+      title          = "{Pion Interferometry of Quark-Gluon Plasma}",
+      journal        = "Phys. Rev. D",
+      volume         = "33",
+      year           = "1986",
+      pages          = "1314",
+      doi            = "10.1103/PhysRevD.33.1314",
+      SLACcitation   = "%%CITATION = PHRVA,D33,1314;%%"
+}
+@article{Pratt:2008qv,
+      author         = "Pratt, Scott",
+      title          = "{Resolving the Hanbury Brown–Twiss Puzzle in Relativistic Heavy Ion
+                        Collision}",
+      journal        = "Phys.~Rev.~Lett.",
+      volume         = "102",
+      year           = "2009",
+      pages          = "232301",
+      doi            = "10.1103/PhysRevLett.102.232301",
+      eprint         = "0811.3363",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:0811.3363;%%"
+}
 @article{Romatschke:2016hle,
       author         = "Romatschke, Paul",
       title          = "{Do nuclear collisions create a locally equilibrated
