--- a/acronyms.tex
+++ b/acronyms.tex
@@ -3,6 +3,7 @@
 \begin{acronym}
   \acro{AdS}{Anti-de Sitter}
   \acro{CFT}{conformal field theory}
+  \acro{CNM}{cold nuclear matter}
   \acro{CTP}{central trigger processor}
   \acro{CGC}{color-glass condensate}
   %% \acro{DCA}{distance at closest approach}
