some text on test statistic

--- a/bibtex/bib/experiment.bib
+++ b/bibtex/bib/experiment.bib
@@ -82,3 +82,11 @@
       doi            = "10.1080/14786440508637080",
       SLACcitation   = "%%CITATION = INSPIRE-45404;%%"
 }
+@PHDTHESIS{Soltz:1994PhDT,
+   author = {{Soltz}, R.~A.},
+    title = "{Two-Pion Correlation Measurements for 14.6 A.GEV/C SILICON-28 + X and 11.6 A.GEV/C GOLD-197 + Gold.}",
+   school = {MASSACHUSETTS INSTITUTE OF TECHNOLOGY.},
+     year = 1994,
+   adsnourl = {http://adsabs.harvard.edu/abs/1994PhDT........94S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
