--- a/bibtex/bib/techreport.bib
+++ b/bibtex/bib/techreport.bib
@@ -248,6 +248,19 @@
       url            = "http://cds.cern.ch/record/1435196",
       SLACcitation   = "%%CITATION = ATLAS-CONF-2012-042;%%"
 }
+@article{Baker1984437,
+title = "Clarification of the use of CHI-square and likelihood functions in fits to histograms ",
+journal = "Nuclear Instruments and Methods in Physics Research ",
+volume = "221",
+number = "2",
+pages = "437",
+year = "1984",
+note = "",
+noissn = "0167-5087",
+doi = "http://dx.doi.org/10.1016/0167-5087(84)90016-4",
+nourl = "http://www.sciencedirect.com/science/article/pii/0167508784900164",
+author = "Steve Baker and Robert D. Cousins"
+}
 @article{Bruning:2004ej,
       author         = "Bruning, Oliver S. and Collier, P. and Lebrun, P. and
                         Myers, S. and Ostojic, R. and Poole, J. and Proudlock, P.",
@@ -335,6 +348,18 @@
       primaryClass   = "nucl-th",
       reportNumber   = "LBL-34246",
       SLACcitation   = "%%CITATION = NUCL-TH/9502021;%%"
+}
+@article{James:1975dr,
+      author         = "James, F. and Roos, M.",
+      title          = "{Minuit: A System for Function Minimization and Analysis
+                        of the Parameter Errors and Correlations}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "10",
+      year           = "1975",
+      pages          = "343",
+      doi            = "10.1016/0010-4655(75)90039-9",
+      reportNumber   = "CERN-DD-75-20",
+      SLACcitation   = "%%CITATION = CPHCB,10,343;%%"
 }
 @article{Wicke:1998efw,
       author         = "Wicke, D.",
