correlation function fits

--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -231,11 +231,11 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 
 %% \newcommand{\Npart}{\ensuremath{N_{\mathrm{part}}}\xspace}
 %% \newcommand{\avgNpart}{\ensuremath{\langle\Npart\rangle}\xspace}
-\newcommand{\dNdeta}{\ensuremath{\mathrm{d}\Nch/\mathrm{d}\eta}\xspace}
-\newcommand{\dNdy}{\ensuremath{\mathrm{d}\Nch/\mathrm{d}y^{\star}}\xspace}
+\newcommand{\dNdeta}{\ensuremath{d\Nch/d\eta}\xspace}
+\newcommand{\dNdy}{\ensuremath{d\Nch/dy^{\star}}\xspace}
 \newcommand{\avgdNdeta}{\ensuremath{\langle\dNdeta\rangle}\xspace}
 \newcommand{\avgdNdy}{\ensuremath{\langle\dNdy\rangle}\xspace}
-\newcommand{\dEdx}{\ensuremath{\mathrm{d}E/\mathrm{d}x}\xspace}
+\newcommand{\dEdx}{\ensuremath{dE/dx}\xspace}
 %% \newcommand{\ystar}{\ensuremath{y^{\star}}\xspace}
 
 \newcommand{\Hijing}{\textsc{Hijing}\xspace}
