some intro to femtoscopy from internal note

--- a/bibtex/bib/experiment.bib
+++ b/bibtex/bib/experiment.bib
@@ -42,6 +42,24 @@
       reportNumber   = "CMS-HIG-12-028, CERN-PH-EP-2012-220",
       SLACcitation   = "%%CITATION = ARXIV:1207.7235;%%"
 }
+@article{HanburyBrown:1954,
+      author         = "Hanbury Brown, Robert and Twiss, Robert Q.",
+      title          = "LXXIV. A new type of interferometer for use in radio astronomy",
+      journal        = "Phil. Mag.",
+      volume         = "45",
+      pages          = "663",
+      year           = "1954",
+      doi = {10.1080/14786440708520475}
+}
+@article{HanburyBrown:1956,
+      author         = "Hanbury Brown, Robert and Twiss, Robert Q.",
+      title          = "{A Test of a New Type of Stellar Interferometer on Sirius}",
+      journal        = "Nature",
+      volume         = "178",
+      pages          = "1046",
+      year           = "1956",
+      doi            = "10.1038/1781046a0"
+}
 @article{Lattes:1947mw,
       author         = "Lattes, C. M. G. and Muirhead, H. and Occhialini, G. P.
                         S. and Powell, C. F.",
