--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -327,6 +327,20 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = NUCL-TH/0604032;%%"
 }
+@article{Csorgo:2003uv,
+      author         = "Csorgo, T. and Hegyi, S. and Zajc, W.A.",
+      title          = "{Bose-Einstein correlations for Levy stable source
+                        distributions}",
+      journal        = "Eur. Phys. J. C",
+      volume         = "36",
+      pages          = "67",
+      doi            = "10.1140/epjc/s2004-01870-9",
+      year           = "2004",
+      eprint         = "nucl-th/0310042",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = NUCL-TH/0310042;%%",
+}
 @article{Danielewicz:1984ww,
       author         = "Danielewicz, P. and Gyulassy, M.",
       title          = "{Dissipative Phenomena in Quark Gluon Plasmas}",
@@ -391,6 +405,19 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       pages          = "1067-1084",
       doi            = "10.1103/PhysRev.125.1067",
       SLACcitation   = "%%CITATION = PHRVA,125,1067;%%"
+}
+@article{Goldhaber:1960sf,
+      author         = "Goldhaber, Gerson and Goldhaber, Sulamith and Lee,
+                        Won-Yong and Pais, Abraham",
+      title          = "{Influence of Bose-Einstein statistics on the anti-proton
+                        proton annihilation process}",
+      journal        = "Phys. Rev.",
+      volume         = "120",
+      year           = "1960",
+      pages          = "300-312",
+      doi            = "10.1103/PhysRev.120.300",
+      nonote           = "[,2(1960)]",
+      SLACcitation   = "%%CITATION = PHRVA,120,300;%%"
 }
 @article{Gross:1973id,
       author         = "Gross, David J. and Wilczek, Frank",
@@ -649,6 +676,19 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       archivePrefix  = "arXiv",
       primaryClass   = "hep-th",
       SLACcitation   = "%%CITATION = ARXIV:1704.08699;%%"
+}
+@article{Sinyukov:1998fc,
+      author         = "Sinyukov, Yu M. and Lednicky, R. and Akkelin, S.V. and
+                        Pluta, J. and Erazmus, B.",
+      title          = "{Coulomb corrections for interferometry analysis of
+                        expanding hadron systems}",
+      journal        = "Phys.~Lett.~B",
+      volume         = "432",
+      pages          = "248",
+      doi            = "10.1016/S0370-2693(98)00653-4",
+      year           = "1998",
+      reportNumber   = "SUBATECH-98-01",
+      SLACcitation   = "%%CITATION = PHLTA,B432,248;%%",
 }
 @article{Sjostrand:2007gs,
       author         = "Sjöstrand, Torbjorn and Mrenna, Stephen and Skands, Peter
