some more detail on coordinate system and symmetry

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -327,6 +327,18 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = NUCL-TH/0604032;%%"
 }
+@article{Csorgo:1989kq,
+      author         = "Csörgo, T. and Zimanyi, J. and Bondorf, J. and
+                        Heiselberg, H. and Pratt, S.",
+      title          = "{Two Pion Correlation From Spacer}",
+      journal        = "Phys. Lett. B",
+      volume         = "241",
+      year           = "1990",
+      pages          = "301",
+      doi            = "10.1016/0370-2693(90)91646-S",
+      reportNumber   = "KFKI-1989-56/A",
+      SLACcitation   = "%%CITATION = PHLTA,B241,301;%%"
+}
 @article{Csorgo:2003uv,
       author         = "Csorgo, T. and Hegyi, S. and Zajc, W.A.",
       title          = "{Bose-Einstein correlations for Levy stable source
