out-side-long figure and notes from brian

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -287,6 +287,22 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       reportNumber   = "GLAS-PPE-2014-05, MCNET-14-29, IPPP-14-111, DCPT-14-222",
       SLACcitation   = "%%CITATION = ARXIV:1412.7420;%%"
 }
+@article{Busza:2018rrf,
+      author         = "Busza, Wit and Rajagopal, Krishna and van der Schee,
+                        Wilke",
+      title          = "{Heavy Ion Collisions: The Big Picture, and the Big
+                        Questions}",
+      journal        = "Ann. Rev. Nucl. Part. Sci.",
+      volume         = "68",
+      year           = "2018",
+      pages          = "339-376",
+      doi            = "10.1146/annurev-nucl-101917-020852",
+      eprint         = "1802.04801",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-4892, MIT-CTP/4892",
+      SLACcitation   = "%%CITATION = ARXIV:1802.04801;%%"
+}
 @article{Callan:1969uq,
       author         = "Callan, Jr., Curtis G. and Gross, David J.",
       title          = "{High-energy electroproduction and the constitution of
