--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -211,7 +211,7 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\Rlong}{\ensuremath{R_{\mathrm{long}}}\xspace}
 \newcommand{\Rol}{\ensuremath{R_{\mathrm{ol}}}\xspace}
 \newcommand{\Ros}{\ensuremath{R_{\mathrm{os}}}\xspace}
-\newcommand{\Rls}{\ensuremath{R_{\mathrm{ls}}}\xspace}
+\newcommand{\Rsl}{\ensuremath{R_{\mathrm{sl}}}\xspace}
 \newcommand{\linv}{\ensuremath{\lambda_{\mathrm{inv}}}\xspace}
 \newcommand{\losl}{\ensuremath{\lambda_{\mathrm{osl}}}\xspace}
 \newcommand{\Reff}{\ensuremath{R_{\mathrm{eff}}}\xspace}
