some intro and vocab for eta/s

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -13,6 +13,7 @@
   \acro{EoS}{equation of state}
   \acro{FCal}{forward calorimeter}
   \acro{HEC}{hadronic end-cap}
+  \acro{HI}{heavy ion}
   \acro{HighET}{high transverse energy}
   \acro{HLT}{High Level Trigger}
   \acro{HMT}{high-multiplicity trigger}
@@ -42,6 +43,7 @@
   \acro{QED}{quantum electrodynamics}
   \acro{QGP}{quark-gluon plasma}
   \acro{RF}{radio frequency}
+  \acro{RHIC}{Relativistic Heavy Ion Collider}
   \acro{SCT}{semi-conductor tracker}
   \acro{SLAC}{Stanford Linear Accelerator Center}
   \acro{SPS}{Super Proton Synchrotron}
