more intro and fixing some acronyms in captions

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -41,6 +41,7 @@
   \acro{PV}{primary vertex}
   \acro{QCD}{quantum chromodynamics}
   \acro{QED}{quantum electrodynamics}
+  \acro{QFT}{quantum field theory}
   \acro{QGP}{quark-gluon plasma}
   \acro{RF}{radio frequency}
   \acro{RHIC}{Relativistic Heavy Ion Collider}
