AMPT and CGC references

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -496,6 +496,22 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:0912.2541;%%"
 }
+@article{Iancu:2000hn,
+      author         = "Iancu, Edmond and Leonidov, Andrei and McLerran, Larry
+                        D.",
+      title          = "{Nonlinear gluon evolution in the color glass condensate.
+                        1.}",
+      journal        = "Nucl. Phys.",
+      volume         = "A692",
+      year           = "2001",
+      pages          = "583-645",
+      doi            = "10.1016/S0375-9474(01)00642-X",
+      eprint         = "hep-ph/0011241",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SACLAY-T00-166, BNL-NT-00-24",
+      SLACcitation   = "%%CITATION = HEP-PH/0011241;%%"
+}
 @article{Israel:1976tn,
       author         = "Israel, W.",
       title          = "{Nonstationary irreversible thermodynamics: A Causal
@@ -573,6 +589,21 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       primaryClass   = "nucl-th",
       reportNumber   = "DIRAC-2004-06",
       SLACcitation   = "%%CITATION = NUCL-TH/0501065;%%"
+}
+@article{Lin:2004en,
+      author         = "Lin, Zi-Wei and Ko, Che Ming and Li, Bao-An and Zhang,
+                        Bin and Pal, Subrata",
+      title          = "{A Multi-phase transport model for relativistic heavy ion
+                        collisions}",
+      journal        = "Phys. Rev.",
+      volume         = "C72",
+      year           = "2005",
+      pages          = "064901",
+      doi            = "10.1103/PhysRevC.72.064901",
+      eprint         = "nucl-th/0411110",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = NUCL-TH/0411110;%%"
 }
 @article{Lisa:2005dd,
       author         = "Lisa, Michael Annan and Pratt, Scott and Soltz, Ron and
