collision system and acronyms

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,7 +1,9 @@
 \chapter{List of abbreviations}
 
 \begin{acronym}
+  \acro{AA}[\ce{A}+\ce{A}]{nucleus-nucleus}
   \acro{AdS}{Anti-de Sitter}
+  \acro{AMPT}{a multiphase transport}
   \acro{CFT}{conformal field theory}
   \acro{CNM}{cold nuclear matter}
   \acro{CTP}{central trigger processor}
@@ -33,8 +35,13 @@
   \acro{MinBias}{minimum bias}
   \acro{MC}{Monte Carlo}
   \acro{NLO}{next-to-leading order}
+  \acro{pA}[\ensuremath{p}+\ce{A}]{proton-nucleus}
+  \acro{pAu}[\ensuremath{p}+\ce{Au}]{proton-gold}
+  \acro{PbPb}[\ce{Pb}+\ce{Pb}]{proton-lead}
   \acro{PDF}{parton distribution function}
   \acro{PID}{particle identification}
+  \acro{pp}[\ensuremath{pp}]{proton-proton}
+  \acro{pPb}[\ensuremath{p}+\ce{Pb}]{proton-lead}
   \acro{pQCD}{perturbative \ac{QCD}}
   \acro{PS}{Proton Synchrotron}
   \acro{PSB}{Proton Synchrotron Booster}
