--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -167,7 +167,11 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\pPbenergy}{$\sqrt{s_{\mathrm{NN}}}=5.02~\tev$\xspace}
 \newcommand{\pPblumi}{$28~\inb$\xspace}
 \newcommand{\ppenergy}{$\sqs =13$~\TeV\xspace}
-\renewcommand{\AA}{\mbox{A+A}\xspace}
+\renewcommand{\AA}{\ac{AA}\xspace}
+\renewcommand{\pA}{\ac{pA}\xspace}
+\renewcommand{\pp}{\ac{pp}\xspace}
+\renewcommand{\pPb}{\ac{pPb}\xspace}
+\renewcommand{\PbPb}{\ac{PbPb}\xspace}
 %% \newcommand{\PbPb}{\mbox{Pb+Pb}\xspace} %% these are defined in atlasheavyion.sty.
 %% \newcommand{\pPb}{\mbox{$p$+Pb}\xspace}
 %%\newcommand{\pp}{\mbox{$pp$}\xspace}
