remove version warning for mhchem

--- a/latex/atlasheavyion.sty
+++ b/latex/atlasheavyion.sty
@@ -3,7 +3,7 @@
 % Adapted for atlaslatex by Ian Brock.
 
 % Package used for chemical elements
-\RequirePackage{mhchem}
+\RequirePackage[version=4]{mhchem}
 
 % +------------------------------------+
 % |                                    |
