updating baker/cousins bib to inspire entry

--- a/bibtex/bib/techreport.bib
+++ b/bibtex/bib/techreport.bib
@@ -248,18 +248,17 @@
       url            = "http://cds.cern.ch/record/1435196",
       SLACcitation   = "%%CITATION = ATLAS-CONF-2012-042;%%"
 }
-@article{Baker1984437,
-title = "Clarification of the use of CHI-square and likelihood functions in fits to histograms ",
-journal = "Nuclear Instruments and Methods in Physics Research ",
-volume = "221",
-number = "2",
-pages = "437",
-year = "1984",
-note = "",
-noissn = "0167-5087",
-doi = "http://dx.doi.org/10.1016/0167-5087(84)90016-4",
-nourl = "http://www.sciencedirect.com/science/article/pii/0167508784900164",
-author = "Steve Baker and Robert D. Cousins"
+@article{Baker:1983tu,
+      author         = "Baker, Steve and Cousins, Robert D.",
+      title          = "{Clarification of the Use of Chi Square and Likelihood
+                        Functions in Fits to Histograms}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "221",
+      year           = "1984",
+      pages          = "437-442",
+      doi            = "10.1016/0167-5087(84)90016-4",
+      reportNumber   = "UCLA-HEP-83-3",
+      SLACcitation   = "%%CITATION = NUIMA,221,437;%%"
 }
 @article{Bruning:2004ej,
       author         = "Bruning, Oliver S. and Collier, P. and Lebrun, P. and
