AuAu macro and PbPb fix

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -4,6 +4,7 @@
   \acro{AA}[\ce{A}+\ce{A}]{nucleus-nucleus}
   \acro{AdS}{Anti-de Sitter}
   \acro{AMPT}{a multiphase transport}
+  \acro{AuAu}[\ce{Au}+\ce{Au}]{gold-gold}
   \acro{CFT}{conformal field theory}
   \acro{CNM}{cold nuclear matter}
   \acro{CTP}{central trigger processor}
@@ -37,7 +38,7 @@
   \acro{NLO}{next-to-leading order}
   \acro{pA}[\ensuremath{p}+\ce{A}]{proton-nucleus}
   \acro{pAu}[\ensuremath{p}+\ce{Au}]{proton-gold}
-  \acro{PbPb}[\ce{Pb}+\ce{Pb}]{proton-lead}
+  \acro{PbPb}[\ce{Pb}+\ce{Pb}]{lead-lead}
   \acro{PDF}{parton distribution function}
   \acro{PID}{particle identification}
   \acro{pp}[\ensuremath{pp}]{proton-proton}
