--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -172,10 +172,10 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \renewcommand{\pp}{\ac{pp}\xspace}
 \renewcommand{\pPb}{\ac{pPb}\xspace}
 \renewcommand{\PbPb}{\ac{PbPb}\xspace}
+\renewcommand{\AuAu}{\ac{AuAu}\xspace}
 %% \newcommand{\PbPb}{\mbox{Pb+Pb}\xspace} %% these are defined in atlasheavyion.sty.
 %% \newcommand{\pPb}{\mbox{$p$+Pb}\xspace}
 %%\newcommand{\pp}{\mbox{$pp$}\xspace}
-%% \newcommand{\AuAu}{\mbox{Au+Au}\xspace}
 %% \newcommand{\dAu}{\mbox{$d$+Au}\xspace}
 %% \newcommand{\HeAu}{\mbox{${}^3$He+Au}\xspace}
 %%\newcommand{\ppbar}{\mbox{$\emph{p\overline{p}}$}}
