intro specific to these results

--- a/bibtex/bib/ATLAS.bib
+++ b/bibtex/bib/ATLAS.bib
@@ -8023,7 +8023,7 @@
 
 @Article{HION-2015-11,
     author         = "{ATLAS Collaboration}",
-    title          = "{Femtoscopy with identified charged pions in proton--lead collisions at \(\sqrt{s_{\text{NN}}}=5.02~\text{TeV}\) with ATLAS}",
+    title          = "{Femtoscopy with identified charged pions in proton--lead collisions at \(\sqrt{s_\mathrm{NN}}=5.02~\text{TeV}\) with ATLAS}",
     journal        = "Phys. Rev. C",
     volume         = "96",
     year           = "2017",
