--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -178,19 +178,6 @@
                         DCPT-08-22, IPPP-08-11, CP3-08-05",
       SLACcitation   = "%%CITATION = ARXIV:0803.0883;%%"
 }
-@article{Baker1984437,
-title = "Clarification of the use of CHI-square and likelihood functions in fits to histograms ",
-journal = "Nuclear Instruments and Methods in Physics Research ",
-volume = "221",
-number = "2",
-pages = "437",
-year = "1984",
-note = "",
-noissn = "0167-5087",
-doi = "http://dx.doi.org/10.1016/0167-5087(84)90016-4",
-nourl = "http://www.sciencedirect.com/science/article/pii/0167508784900164",
-author = "Steve Baker and Robert D. Cousins"
-}
 @article{Bertsch:1989vn,
       author         = "Bertsch, G. F.",
       title          = "{Pion Interferometry as a Probe of the Plasma}",
@@ -421,7 +408,7 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       year           = "1967",
       pages          = "29-30",
       doi            = "10.1016/0370-2693(67)90067-6",
-      note           = "[,325(1967)]",
+      nonote           = "[,325(1967)]",
       SLACcitation   = "%%CITATION = PHLTA,B25,29;%%"
 }
 @article{GellMann:1962xb,
@@ -455,7 +442,7 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       year           = "1973",
       pages          = "1343-1346",
       doi            = "10.1103/PhysRevLett.30.1343",
-      note           = "[,271(1973)]",
+      nonote           = "[,271(1973)]",
       SLACcitation   = "%%CITATION = PRLTA,30,1343;%%"
 }
 @article{Gross:1973ju,
@@ -641,7 +628,7 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       year           = "1999",
       pages          = "1113-1133",
       doi            = "10.1023/A:1026654312961, 10.4310/ATMP.1998.v2.n2.a1",
-      note           = "[Adv. Theor. Math. Phys.2,231(1998)]",
+      nonote           = "[Adv. Theor. Math. Phys.2,231(1998)]",
       eprint         = "hep-th/9711200",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-th",
@@ -795,7 +782,7 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       year           = "2005",
       pages          = "8403-8413",
       doi            = "10.1103/RevModPhys.77.857",
-      note           = "[Rev. Mod. Phys.77,857(2005)]",
+      nonote           = "[Rev. Mod. Phys.77,857(2005)]",
       eprint         = "hep-ph/0502113",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
