--- a/thesis.tex
+++ b/thesis.tex
@@ -25,6 +25,7 @@
 \usepackage{multirow}
 \usepackage{bm}
 \usepackage{mathrsfs}
+\usepackage[utf8]{inputenc} %% for UTF in bib files
 
 % \addto\captionsdutch{%
 %   \renewcommand{\appendixname}%
