--- a/bibtex/bib/experiment.bib
+++ b/bibtex/bib/experiment.bib
@@ -15,6 +15,108 @@
       reportNumber   = "CERN-PH-EP-2015-153, LHCB-PAPER-2015-029",
       SLACcitation   = "%%CITATION = ARXIV:1507.03414;%%"
 }
+@article{Abelev:2014pja,
+      noauthor         = "Abelev, Betty Bezverkhny and others",
+      author         = "{ALICE Collaboration}",
+      title          = "{Freeze-out radii extracted from three-pion cumulants in
+                        pp, p–Pb and Pb–Pb collisions at the LHC}",
+      collaboration  = "ALICE",
+      journal        = "Phys. Lett.",
+      volume         = "B739",
+      year           = "2014",
+      pages          = "139-151",
+      doi            = "10.1016/j.physletb.2014.10.034",
+      eprint         = "1404.1194",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "CERN-PH-EP-2014-062, ALICE-PUBLIC-2014-003",
+      SLACcitation   = "%%CITATION = ARXIV:1404.1194;%%"
+}
+@article{Adam:2015pya,
+      noauthor         = "Adam, J. and others",
+      author         = "{ALICE Collaboration}",
+      title          = "{Two-pion femtoscopy in p-Pb collisions at $\sqrt{s_\mathrm
+                        {NN}}=5.02$ TeV}",
+      collaboration  = "ALICE",
+      journal        = "Phys. Rev.",
+      volume         = "C91",
+      year           = "2015",
+      pages          = "034906",
+      doi            = "10.1103/PhysRevC.91.034906",
+      eprint         = "1502.00559",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "CERN-PH-EP-2015-019",
+      SLACcitation   = "%%CITATION = ARXIV:1502.00559;%%"
+}
+@article{Adamczyk:2014mxp,
+      author         = "Adamczyk, L. and others",
+      title          = "{Beam-energy-dependent two-pion interferometry and the
+                        freeze-out eccentricity of pions measured in heavy ion
+                        collisions at the STAR detector}",
+      collaboration  = "STAR",
+      journal        = "Phys. Rev.",
+      volume         = "C92",
+      year           = "2015",
+      number         = "1",
+      pages          = "014904",
+      doi            = "10.1103/PhysRevC.92.014904",
+      eprint         = "1403.4972",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1403.4972;%%"
+}
+@article{Adamova:2017opl,
+      noauthor         = "Adamova, Dagmar and others",
+      author         = "{ALICE Collaboration}",
+      title          = "{Azimuthally differential pion femtoscopy in Pb-Pb
+                        collisions at $\sqrt{s_\mathrm{NN}}=2.76$ TeV}",
+      collaboration  = "ALICE",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "118",
+      year           = "2017",
+      number         = "22",
+      pages          = "222301",
+      doi            = "10.1103/PhysRevLett.118.222301",
+      eprint         = "1702.01612",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "CERN-EP-2017-013",
+      SLACcitation   = "%%CITATION = ARXIV:1702.01612;%%"
+}
+@article{Adams:2003ra,
+      author         = "Adams, J. and others",
+      title          = "{Azimuthally sensitive HBT in Au + Au collisions at
+                      $\sqrt{s_\mathrm{NN}} = 200$ GeV}",
+      collaboration  = "STAR",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "93",
+      year           = "2004",
+      pages          = "012301",
+      doi            = "10.1103/PhysRevLett.93.012301",
+      eprint         = "nucl-ex/0312009",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = NUCL-EX/0312009;%%"
+}
+@article{Adare:2014vax,
+      author         = "Adare, A. and others",
+      title          = "{Azimuthal-angle dependence of
+                        charged-pion-interferometry measurements with respect to
+                        second- and third-order event planes in Au$+$Au collisions
+                        at $\sqrt{s_\textrm{NN}}=200$ GeV}",
+      collaboration  = "PHENIX",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "112",
+      year           = "2014",
+      number         = "22",
+      pages          = "222301",
+      doi            = "10.1103/PhysRevLett.112.222301",
+      eprint         = "1401.7680",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1401.7680;%%"
+}
 @article{Chadwick:1932ma,
       author         = "Chadwick, J.",
       title          = "{Possible Existence of a Neutron}",
