--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,5 @@
 The spacetime dimensions of the particle source in proton-lead collisions at \pPbenergy is measured with the ATLAS detector at the Large Hadron Collider.
-Femtoscopic measurements are made from correlation functions build with charged pions identified by their ionization energy loss.
+Femtoscopic measurements are made from correlation functions built with charged pions identified by their ionization energy loss.
 The measured HBT radii that represent the source dimensions are presented differentially as a function of centrality, transverse momentum, rapidity.
 %% Pion pairs are selected with a rapidity $-2 < y^{\star}_{\pi\pi} < 1$ and with an average transverse momentum $0.1 < \kt < 0.8~\GeV$.
 The effect of jet fragmentation on the two-particle correlation function is studied, and a method using opposite-charge pair data to constrain its contributions to the measured correlations is described.
